--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.3.72"
     ext.activity_ktx_version = "1.1.0"
     ext.fragment_ktx_version = "1.2.5"
     ext.dagger_version = "2.29"
     ext.lifecycle_version = "2.2.0"
-    ext.room_version = "2.2.5"
+    ext.room_version = "2.3.0-alpha02"
     ext.okhttp="4.9.0"
     ext.retrofit = "2.9.0"
     ext.material_design="1.2.1"
     ext.navigation_version = "2.3.0"
-    ext.kotlin_version = "1.4.10"
+    ext.paging_version = "3.0.0-alpha05"
     repositories {
         google()
         jcenter()
